<resources>
    <string name="app_name">expense-tracker</string>

    <string name="Label_1">Create Your \n Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_us">Join Us</string>
    <string name="terms">By Pressing \'Join Us\' You agree\n to our trems and conditions</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="transactions_type">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>