<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showLoginForm"
            android:text="Login"
            android:gravity="end"
            android:textColor="@color/blackcolor"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Label_1"
            android:textColor="@color/blackcolor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- First Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColorHint="@color/fullwhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Lastname  Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColorHint="@color/fullwhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:hint=" Email "
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColorHint="@color/fullwhite" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColorHint="@color/fullwhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColorHint="@color/fullwhite"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_joinus"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/joinbtn"
            android:text="@string/join_us"
            android:textAllCaps="false"
            android:textColor="@color/whitecolor"
            tools:ignore="OnClick" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/terms"
            android:textColor="@color/fullwhite" />

    </LinearLayout>


</LinearLayout>